finished homepage resp

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,15 +56,15 @@
 		</div>
 	</div>
 	<div class="mobile_button">
-		<div class="center">
-			<div class="center_mobile">
+		<div class="center" >
+			<div class=" " style=" position: absolute; left:50%; -webkit-transform: translateX(-50%); font-size:3em; margin-top:120px; z-index:10;"  >
 				<%= link_to 'RSVP', controller: 'guests', action: 'new' %>
 			</div>
 			<div class='mickeyUi' style="text-shadow:
     -5px -1px 5px #eee,
     5px -1px 5px #eee,
     -5px 1px 5px #eee,
-    5px 1px 5px #eee;  " >&#x00AA;</div>
+    5px 1px 5px #eee; " >&#x00AA;</div>
 		</div>
 	</div>
 </div>
