--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -238,8 +238,9 @@
 	position: absolute;
 	left: 0;
 	right:0;
-	bottom:0;
-	top:0;
+	text-align: center;
+	font-family: 'Waltograph';
+
 }
 
 .mobile_button .mickeyUi {
@@ -257,6 +258,9 @@
 .mobile_button .mickeyUi a {
 	text-decoration: none;
 	color: black;
+	position: absolute;
+	left: 0;
+	right: 0;
 
 }
 .mobile_button .center .mickeyUi {
@@ -266,10 +270,17 @@
 	font-size: 10em;
 }
 
+.center a {
+	color: rgba(255,255,255,0.9);
+	text-shadow: 2px 2px 0 black;
+	z-index: 10;
+	text-decoration: none;
+}
+
 .center_mobile {
-	text-align: center; 
 	font-size: 3em;
 	font-family: 'Waltograph';
+	display: inline; 
 }
 
 .center_mobile a {
@@ -895,6 +906,10 @@ border-right: 30px solid #202020;
 	background-image: url('a11.png');
 }
 
+#footer_mobile {
+	display: none;
+}
+
 /*@media only screen and (min-width: 300px) and (max-width: 359px){*/
 @media only screen and (min-width: 640px) and (max-width: 799px){
 	#title_landing {
@@ -961,6 +976,10 @@ border-right: 30px solid #202020;
 
 	#landing {
 		display: none;
+	}
+
+	#footer_mobile {
+		display: block;
 	}
 }
 
