--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -34,16 +34,16 @@
 	<%= image_tag('addy.jpg')%>
 </div> 
 <div class="amanda" style='display:none'>
-	<%= image_tag('addy.jpg')%>
+	<%= image_tag('amanda.JPG')%>
 </div> 
 <div class="jen" style='display:none'>
 	<%= image_tag('jen.JPG')%>
 </div> 
 <div class="jasmin" style='display:none'>
-	<%= image_tag('jen.JPG')%>
+	<%= image_tag('jasmin.JPG')%>
 </div> 
 <div class="monica" style='display:none'>
-	<%= image_tag('jen.JPG')%>
+	<%= image_tag('monica.JPG')%>
 </div> 
 <div class="anthony" style='display:none'>
 	<%= image_tag('anthony.jpg')%>
@@ -63,6 +63,7 @@
 <div class="stephen" style='display:none'>
 	<%= image_tag('stephen.jpg')%>
 </div> 
+
 
 
 
