--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -17,7 +17,7 @@
 		<% end %>
 
 		<div id="form_error">
-			<h1>You were invited right? Try again &#2047 </h1>
+			<h1>You were invited right? Try again <span class="mickeyUi" style="float:none; color:red;">&#x00AA;</span> </h1>
 		</div>
 
 		<div id="form_response">
