--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -44,7 +44,7 @@
   <% end %>
 
   <%= link_to 'Made a mistake?' , edit_guest_path(@guest), :class => 'rsvp_link_mistake' %>
-  <%= link_to '&#2047 Lock Me In!' .html_safe, controller: 'welcome', action: 'index' %>
+  <%= link_to '<span class="mickeyUi" style="float:none;">&#x00AA</span> Lock Me In!'.html_safe, controller: 'welcome', action: 'index' %>
     </div>
   </div>
 </div>
@@ -60,36 +60,3 @@
 </footer>
 
 
-<!-- <table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Attending</th>
-    <th>Food Choice</th>
-    <th colspan="2"></th>
-  </tr>
- 
-<% @guests.each do |guest| %>
-  <tr>
-    <td><%= guest.first_name %></td>
-    <td><%= guest.last_name %></td>
-    <% if guest.rsvp == true %>
-    	<td>Yes</td>
-    	<% else %>
-    	<td>No</td>
-    <% end %>
-    <% if guest.food == 'beef' %>
-    	<td>Beef</td>
-    	<% elsif guest.food == 'chicken' %>
-      <td>Chicken</td>
-      <% elsif guest.food == 'fish' %>
-    	<td>Fish</td>
-    	<% else  %>
-    	<td>NA</td>
-    <% end %>
-    <td><%= link_to 'Show', guest_path(guest) %></td>
-    <td><%= link_to 'Edit', edit_guest_path(guest) %></td>
-  </tr>
-<% end %>
-</table>
- -->
