--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -142,9 +142,9 @@
 	        		"name" : 'Anthony',
 	        		"position" : 'Best Man',
 	        		'klass' : '.anthony',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Strawberry',
+	        		'movie' : 'Pirates of the Caribbean'
 	        	},
 	        	{
 	        		"name" : 'Vicente',
@@ -177,17 +177,17 @@
 	        		"name" : 'Josh',
 	        		"position" : 'Groomsmen',
 	        		'klass' : '.josh',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Apple Cinnamon French Toast',
+	        		'movie' : 'Toy Story'
 	        	},
 	        	{
 	        		"name" : 'Stephen',
 	        		"position" : 'Groomsmen',
 	        		'klass' : '.stephen',
-	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Macadamia Nut',
-	        		'movie' : 'Up'
+	        		'type' : 'Yogurt',
+	        		'ice_cream' : 'Strawberry',
+	        		'movie' : 'Remember the Titans'
 	        	},
 	        	
 	        ]
