--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -6,11 +6,11 @@
 
 	<div class="form">
 		<%= form_tag('/guests/code_check', id: 'code_form') do %>
-		<h1 style="margin-top:-50px">Enter the Code on the back of the Save the Date card to RSVP</h1>
+		<h1 id="rsvpTitle"><span class="super">Please</span> RSVP by February 1st 2015</h1>
 			
 			<p>
-		    Super Secret Password:
-		    <%= text_field_tag :code, nil, :class => 'enter_code_tag' %>
+		    <span class="super">Super</span> <span class="secret">Secret</span> <span class="pswrd">Password:</span>
+		    <%= text_field_tag :code, nil, :class => 'enter_code_tag'%>
 		    <%= submit_tag 'Enter', :class => 'code_submit' %>
 		  </p>
 
@@ -77,12 +77,13 @@
 
 <script type="text/javascript">
 	$(".rsvp_yes").on("change", function(){
-  $('#form_food').css('display', 'block')
-});
+  		$('#form_food').css('display', 'block')
+	});
 
-$(".rsvp_no").on("change", function(){
-  $('#form_food').css('display', 'none')
-});
+	$(".rsvp_no").on("change", function(){
+  		$('#form_food').css('display', 'none')
+	});
+
 
 function bgOverlay() {
 	 	var height = $(document).height()
