--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -63,7 +63,33 @@
 
 </div>
 
-<footer id='landing'>
+<footer id="landingmobile">
+	<div class='mickeyUi' 
+	style="text-shadow: -5px -1px 5px #eee, 5px -1px 5px #eee, -5px 1px 5px #eee, 5px 1px 5px #eee;
+		   font-size:6em;
+		   margin-top: -40px;
+		   margin-left: 50%;
+		   transform: translateX(-50%);
+		   display:inline-block;
+	 " >&#x00AA;
+	</div>
+	<a href="">
+	<div style="
+				position:absolute;
+				left:0;
+				right:0;
+				font-size: 2em;
+				color:white;
+				text-align:center;
+				line-height: 42px;
+				text-shadow: 0px 0px 2px black;
+	">Home</div>
+	</a>
+
+</footer>
+
+<footer id='landing' >
+	
 	<ul>
 		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
 		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
