--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -125,7 +125,7 @@
 
 
 
-#landing {
+#landing , #landingmobile{
 	width: 100%;
 	height: 60px;
 	background-color: rgba(0,0,0,0.5);
@@ -1001,6 +1001,9 @@ border-right: 30px solid #202020;
 		display: none;
 	}
 
+	#landingmobile {
+		height: 40px;
+	}
 	#footer_mobile {
 		display: block;
 	}
@@ -1013,8 +1016,16 @@ border-right: 30px solid #202020;
 	}
 
 	#enter_code {
+		background-color: transparent;
+		width: 100%;
+		top:0;
+		margin: 0 auto;
+		height: 100%;
+	}
 
-		width: 98%;
+	#enter_code .form {
+		background-color: rgba(255,255,255,0.5);
+		height:100%;
 	}
 
 	#enter_code p {
@@ -1028,6 +1039,11 @@ border-right: 30px solid #202020;
 	.code_submit {
 		width: 75px;
 	}
+
+	#form_error h1 {
+		margin-top: -275px;
+	}
+
 }
 
 @media only screen and (max-width: 400px) {
