--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -41,10 +41,34 @@
   <% end %>
 
   <%= link_to 'Made a mistake?' , edit_guest_path(@guest), :class => 'rsvp_link_mistake' %>
+  <br class="br">
   <%= link_to '<span class="mickeyUi" style="float:none;">&#x00AA</span> Lock Me In!'.html_safe, controller: 'welcome', action: 'index' %>
     </div>
   </div>
 </div>
+
+<footer id="landingmobile">
+  <div class='mickeyUi' 
+  style="text-shadow: -5px -1px 5px #eee, 5px -1px 5px #eee, -5px 1px 5px #eee, 5px 1px 5px #eee;
+       font-size:6em;
+       margin-top: -40px;
+       margin-left: 50%;
+       transform: translateX(-50%);
+       display:inline-block;
+   " >&#x00AA;
+  </div>
+  <div style="
+        position:absolute;
+        left:0;
+        right:0;
+        font-size: 2em;
+        color:white;
+        text-align:center;
+        line-height: 42px;
+        text-shadow: 0px 0px 2px black;
+  "><%= link_to 'Home', controller: 'welcome', action: 'index' %></div>
+
+</footer>
 
 <footer id='landing'>
   <ul>
