--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -7,7 +7,7 @@
 		</div> -->
 
 <div class="about_pic">
-	<%= image_tag("wedding_party.JPG") %>
+	<%#= image_tag("wedding_party.JPG") %>
 </div>
 <div class="about_content_con">
 	<div class="about_content">
@@ -28,8 +28,39 @@
 			<br>
 			 <br>
 		</p>
+		<h3>The Proposal</h3>
+		<p>
+			Not too long after I had started dating the girl of my dreams, I knew in my heart that this was the girl that I was to spend the rest of my life with. My prayers for a beautiful and godly girl to marry had been answered. On September 13th 2014, I proposed at the Yogurtland that we first met at on September 13th 2013 (our first informal date after we had met on Match.com). Before I proposed, we had both decided to reenact the first time we had met. I walked up to meet her right outside of Yogurtland, but instead of greeting her with “Hey, I'm Ben” as I did the first time, I asked her “Did you want to go get some yogurt, or did you want to spend the rest of our lives together?” Dropping down to one knee, I proposed to her. She said yes and I placed the ring on her finger. That moment was everything that I had envisioned, and with the help of my great friends Paul Vonkampen and Brent Rudmann as my photographers/videographers, the memory of that amazing moment was captured.
+			<br>
+			<br>
+			I will never be able to thank God enough for how much He has blessed me with Nicole. I can't wait to spend the rest of eternity with her as my best friend, my soulmate, and my everything.
+		</p>
 	</div>
 </div>
+
+<footer id="landingmobile">
+	<div class='mickeyUi' 
+	style="text-shadow: -5px -1px 5px #eee, 5px -1px 5px #eee, -5px 1px 5px #eee, 5px 1px 5px #eee;
+		   font-size:6em;
+		   margin-top: -40px;
+		   margin-left: 50%;
+		   transform: translateX(-50%);
+		   display:inline-block;
+	 " >&#x00AA;
+	</div>
+	<div style="
+				position:absolute;
+				left:0;
+				right:0;
+				font-size: 2em;
+				color:white;
+				text-align:center;
+				line-height: 42px;
+				text-shadow: 0px 0px 2px black;
+	"><%= link_to 'Home', controller: 'welcome', action: 'index' %></div>
+
+</footer>
+
 
 <footer id='landing'>
 	<ul>
