--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -55,14 +55,16 @@
 }
 
 .about_pic {
+	background-image: url('wedding_party.JPG'); 
+	background-size: cover;
+	background-position: center;
 	width: 40%;
 	text-align: center;
 	float: left;
 	position: absolute;
 	top:0;
 	left: 25px;
-	bottom: 0;
-
+	bottom: 25px;
 }
 
 .about_home_link, .logistics_home_link, .rsvp_home_link {
@@ -88,7 +90,7 @@
 
 .about_content_con {
 	width: 58%;
-	height: 650px;
+	height: 90%;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -115,11 +117,11 @@
 .about_content p {}
 
 .about_pic img {
-	width: 90%;
+	/*width: 90%;
   	margin: 25px auto;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
-	background-color: rgba(0,0,0,.5);
+	background-color: rgba(0,0,0,.5);*/
 
 }
 
@@ -990,6 +992,20 @@ border-right: 30px solid #202020;
 		display: none;
 	}
 
+	.about_pic {
+		width: 45%;
+		left:0;
+	}
+
+	.about_content {
+		width: 75%;
+	}
+
+	#bg_about_us {
+		background-position: center;
+		background-size: cover;
+	}
+
 
 }
 
@@ -1054,6 +1070,19 @@ border-right: 30px solid #202020;
 
 	.br2 {
 		display: none;
+	}
+	.about_pic {
+	display: none;
+	}
+	.about_content_con {
+		width: 100%;
+	}
+
+	
+
+	#bg_about_us {
+		background-position: center;
+		background-size: cover;
 	}
 }
 
@@ -1135,6 +1164,8 @@ border-right: 30px solid #202020;
 	.super, .secret {
 		display: none;
 	}
+
+
 
 	#enter_code {
 		background-color: transparent;
@@ -1232,6 +1263,18 @@ border-right: 30px solid #202020;
 
 	.br2 {
 		display: block;
+	}
+
+	.about_pic {
+		display: none;
+	}
+	.about_content_con {
+		width: 100%;
+	}
+
+	#bg_about_us {
+		background-position: center;
+		background-size: cover;
 	}
 
 
