--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -9,6 +9,29 @@
 		<%= link_to 'Home', controller: 'welcome', action: 'index'%>
 </div> -->
 
+<footer id="landingmobile">
+    <div class='mickeyUi' 
+    style="text-shadow: -5px -1px 5px #eee, 5px -1px 5px #eee, -5px 1px 5px #eee, 5px 1px 5px #eee;
+           font-size:6em;
+           margin-top: -40px;
+           margin-left: 50%;
+           transform: translateX(-50%);
+           display:inline-block;
+     " >&#x00AA;
+    </div>
+    <div style="
+                position:absolute;
+                left:0;
+                right:0;
+                font-size: 2em;
+                color:white;
+                text-align:center;
+                line-height: 42px;
+                text-shadow: 0px 0px 2px black;
+    "><%= link_to 'Home', controller: 'welcome', action: 'index' %></div>
+
+</footer>
+
 <footer id='landing'>
 	<ul>
 		<li><%= link_to 'RSVP', controller: 'guests', action: 'new' %></li>
