--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,7 +36,7 @@
 	<div class="mobile_button">
 		<div class="upper_right">
 			<div class='mickeyUi' >
-				<%= link_to 'Wedding Party', controller: 'welcome', action: 'bridal_party' %>
+				<%= link_to 'Entourage', controller: 'welcome', action: 'bridal_party' %>
 
 			</div>
 		</div>
