--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -144,7 +144,8 @@
 	        		'klass' : '.anthony',
 	        		'type' : 'Yogurt',
 	        		'ice_cream' : 'Strawberry',
-	        		'movie' : 'Pirates of the Caribbean'
+	        		'movie' : 'Pirates of the Caribbean',
+	        		'summary' : 'Anthony is the world\'s best brother to say the least. As my best man, Anthony brings so much awesomeness to my life. I\'m so proud of Anthony, who will be graduating from Concordia University NE with a degree in Computer Science and Mathematics. I\'m forever thankful to him for all of the priceless memories and fun that we\'ve had as brothers. I\'ll forever remember and cherish the times hr would spend with me playing Zelda Ocarina of Time and Pokemon, when he would put up with all the times I annoyed him from the top bunk, and when he and I would read Star Wars books from the library after swimming lessons. I am the Whovian, Pokemon Master, and the best creator of fun I am today because of him, and someday I hope to be the irreplaceable friend and exciting person that he is to me. I love you Anthony!'
 	        	},
 	        	{
 	        		"name" : 'Vicente',
@@ -179,7 +180,8 @@
 	        		'klass' : '.josh',
 	        		'type' : 'Yogurt',
 	        		'ice_cream' : 'Apple Cinnamon French Toast',
-	        		'movie' : 'Toy Story'
+	        		'movie' : 'Toy Story',
+	        		'summary' : 'Josh and I first met as freshman at Concordia University NE. We quickly became the best of friends due to common interests (Apple, Pokemon, Mario Kart, Family Force 5....the list goes on). Josh has been the part of many of my epic memories from college. I would describe him as an identical copy of me, but with a different hair color. He is originally from Winona Minnesota and is currently in basic training in Georgia. Josh sum\'s himself up perfectly: "It\'s not about me. I am a sinner. I am nothing. but God loves me and sent His son for me. He died on the cross for me(and you). I am saved. Jesus is my everything."'
 	        	},
 	        	{
 	        		"name" : 'Stephen',
@@ -187,7 +189,8 @@
 	        		'klass' : '.stephen',
 	        		'type' : 'Yogurt',
 	        		'ice_cream' : 'Strawberry',
-	        		'movie' : 'Remember the Titans'
+	        		'movie' : 'Remember the Titans',
+	        		'summary' : 'Stephen and I first met as freshman at Concordia University NE. Since that time, Stephen and I have made many awesome memories. We were RA\'s together and roommates for our final 2 years of college. We would often talk well into the night about life while eating beans and Doritos. I was blessed to be his best man for his wedding, and now I\'m excited to have him be a part of my wedding. Stephen is originally from Green Bay, Wisconsin. He now lives in Hawaii with his wife Sarah, where they both teach at a Lutheran middle school.'
 	        	},
 	        	
 	        ]
