--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -584,7 +584,9 @@
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%); /* IE 9 */
+    -webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */
+    transform: translate(-50%, -50%);
 }
 
 #code_form {
@@ -629,15 +631,19 @@
 }
 
 
-#form_rsvp, #edit_rsvp_form{
+#form_rsvp, #edit_rsvp_form {
 	position: absolute;
 	left:0;
 	width: 100%;
 	height: 150px;
 	right: 0;
-	top:10%;
+	top:20%;
 	margin: -75px auto 0;
 	text-align: center;
+}
+
+#edit_rsvp_form {
+	top: 10%;
 }
 
 #edit_rsvp_form p {
@@ -998,6 +1004,7 @@ border-right: 30px solid #202020;
 	}
 	#form_rsvp {
 		width: 95%;
+		margin: -40px auto 0;
 	}
 
 	.br2 {
@@ -1065,6 +1072,7 @@ border-right: 30px solid #202020;
 
 	#form_rsvp {
 		width: 100%;
+		margin: -40px auto 0;
 	}
 
 	.overview {
@@ -1096,6 +1104,8 @@ border-right: 30px solid #202020;
 		background-position: center;
 		background-size: cover;
 	}
+
+	
 }
 
 @media only screen and (min-width: 480px) and (max-width: 540px){
