--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -6,7 +6,7 @@
 
 	<div class="form">
 		<%= form_tag('/guests/code_check', id: 'code_form') do %>
-		<h1 id="rsvpTitle"><span class="super">Please</span> RSVP by February 1st 2015</h1>
+		<h1 id="rsvpTitle"><span class="super">Please</span> Enter The Code Below</h1>
 			
 			<p>
 		    <span class="super">Super</span> <span class="secret">Secret</span> <span class="pswrd">Password:</span>
