--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -204,8 +204,8 @@
             						<div class="face front"> \
 		        						<div class="wedding_party_pic_con"></div> \
 		        						<div class="info_container"> \
-		        							<h4>Favorite '+wpArray.type+' : '+wpArray.ice_cream+' </h4> \
-		        							<h4>Favorite Disney Movie : '+wpArray.movie+' </h4> \
+		        							<h4><span class="favorite">Favorite</span> '+wpArray.type+' : '+wpArray.ice_cream+' </h4> \
+		        							<h4><span class="favorite">Favorite</span> Disney Movie : '+wpArray.movie+' </h4> \
 		        							<hr> \
 								        	<h3>'+wpArray.position+'</h3> \
 								        	</div> \
