--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -170,7 +170,7 @@
 	        		"position" : 'Groomsmen',
 	        		'klass' : '.miles',
 	        		'type' : 'Yogurt',
-	        		'ice_cream' : 'Vanilla with fresh fruit',
+	        		'ice_cream' : 'Vanilla <span class="favorite">with fresh fruit</span>',
 	        		'movie' : 'Mighty Ducks',
 	        		'summary' : 'Miles and I first met at Concordia University NE, where I recruited him for my team to do a crazy awesome internship of selling books with Southwestern Advantage(for which he is forever thankful).  He played baseball at College of the Siskiyous in CA and Concordia NE.  He currently lives in Los Angeles working in an office for a cabinetry company.  When he is not at work, he is really involved in youth ministry, softball, and jamming out on his guitar.  You can find him at the beach or traveling the country.  Miles loves Jesus!'
 	        	},
@@ -179,7 +179,7 @@
 	        		"position" : 'Groomsmen',
 	        		'klass' : '.josh',
 	        		'type' : 'Yogurt',
-	        		'ice_cream' : 'Apple Cinnamon French Toast',
+	        		'ice_cream' : 'Apple Cinnamon <span class="favorite">French Toast</span>',
 	        		'movie' : 'Toy Story',
 	        		'summary' : 'Josh and I first met as freshman at Concordia University NE. We quickly became the best of friends due to common interests (Apple, Pokemon, Mario Kart, Family Force 5....the list goes on). Josh has been the part of many of my epic memories from college. I would describe him as an identical copy of me, but with a different hair color. He is originally from Winona Minnesota and is currently in basic training in Georgia. Josh sum\'s himself up perfectly: "It\'s not about me. I am a sinner. I am nothing. but God loves me and sent His son for me. He died on the cross for me(and you). I am saved. Jesus is my everything."'
 	        	},
