--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -7,6 +7,7 @@
 #bg_landing, #bg_about_us, #bg_wedding_party, #bg_wedding_details, .bg_rsvp, #bg_gallery {
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -1107,7 +1108,6 @@ border-right: 30px solid #202020;
 
 	.bridal_party, .groomsmen {
 		width: 100%;
-		border: 4px solid green;
 	}
 
 	.wpContainers {
