fixes safari bug

--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -64,6 +64,30 @@
 	<%= image_tag('stephen.jpg')%>
 </div> 
 
+<footer id="landingmobile">
+	<div class='mickeyUi' 
+	style="text-shadow: -5px -1px 5px #eee, 5px -1px 5px #eee, -5px 1px 5px #eee, 5px 1px 5px #eee;
+		   font-size:6em;
+		   margin-top: -40px;
+		   margin-left: 50%;
+		   -ms-transform: translateX(-50%); 
+    		-webkit-transform: translateX(-50%); 
+		   transform: translateX(-50%);
+		   display:inline-block;
+	 " >&#x00AA;
+	</div>
+	<div style="
+				position:absolute;
+				left:0;
+				right:0;
+				font-size: 2em;
+				color:white;
+				text-align:center;
+				line-height: 42px;
+				text-shadow: 0px 0px 2px black;
+	"><%= link_to 'Home', controller: 'welcome', action: 'index' %></div>
+
+</footer>
 
 
 
@@ -131,7 +155,7 @@
 	        		"position" : 'Bridesmaid',
 	        		'klass' : '.monica',
 	        		'type' : 'Yogurt',
-	        		'ice_cream' : 'Cinnamon Apple Spice',
+	        		'ice_cream' : 'Cinnamon Apple <span class="favorite">Spice</span>',
 	        		'movie' : 'Honey I Shrunk the Kids',
 	        		'summary' : 'Monica was the last Fisher sibling to meet. I met her during my first trip to Nebraska in October 2014 where I was greeted by one of the biggest hugs I\'ve ever had. When Ben and I first started dating, Monica was the first person to reach out to me and I instantly felt like part of the family. Monica is another bride-to-be and I was so excited that I could finally talk to someone about wedding plans! Besides being an organized bride like myself, I found out that Monica was an amazing baker! While I was in Nebraska, Monica made these healthy chocolate chip cookies with coconut flour that tasted better than the real thing. It was so good, we ate the whole batch in one night (That’s my kinda girl!) I also witnessed Monica make a couple of items for her wedding. She is so crafty and talented, Martha Stewart better watch her back! Monica is energetic, creative, and super sweet. I’m so excited for this bride to become one of my bridesmaids!'
 	        	},
