--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -34,12 +34,12 @@
           <h2 class="food_choices" style="font-family: Waltograph; border-bottom: 1px solid black; width: 150px; margin:0 auto;">Food Choices</h2>
 
   <p id='edit_food' style="display: <%= dis %>; height: 40px; line-height: 45px;">
-  <%= f.radio_button(:food, "beef") %>
-  <%= label_tag(:foo_beef, "<span class='wants'>I want </span>Beef".html_safe) %>
-  <%= f.radio_button(:food, "chicken") %>
-  <%= label_tag(:food_chicken, "<span class='wants'>I want </span>Chicken".html_safe) %>
-  <%= f.radio_button(:food, "fish") %>
-  <%= label_tag(:food_fish, "<span class='wants'>I want </span>Fish".html_safe) %>
+  <%= f.radio_button(:food, "vegetarian") %>
+  <%= label_tag(:foo_veg, "<span class='wants'>I want </span>Vegetarian".html_safe) %>
+  <%= f.radio_button(:food, "meat") %>
+  <%= label_tag(:food_meat, "<span class='wants'>I want </span>Meat".html_safe) %>
+  <%#= f.radio_button(:food, "fish") %>
+  <%#= label_tag(:food_fish, "<span class='wants'>I want </span>Fish".html_safe) %>
   </p>
   <p>
     <%= f.submit ' Update RSVP', :class => 'rsvp_update' %>
