--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,7 +1,5 @@
 <div class="bg_rsvp"></div>
 
-
-
 <div id="enter_code">
 
 	<div class="form">
@@ -43,15 +41,12 @@
 				  <div id="form_food">
 				  <h2 class="food_choices" style="font-family: Waltograph; border-bottom: 1px solid black; width: 150px; margin:0 auto;">Food Choices</h2>
 				 <p  style='height: 40px; line-height: 45px;'>
-					<%= f.radio_button(:food, "beef") %>
-					<%= f.label :foo_beef, "<span class='wants'>I want </span>Beef".html_safe %>
-					<%#= label_tag(:foo_beef, "<span>I want beef") %>
-					<%= f.radio_button(:food, "chicken") %>
-					<%= f.label :food_chicken, "<span class='wants'>I want </span>Chicken".html_safe %>
-					<%#= label_tag(:food_chicken, "I want chicken") %>
-					<%= f.radio_button(:food, "fish") %>
-					<%= f.label :foo_fish, "<span class='wants'>I want </span>Fish".html_safe %>
-					<%#= label_tag(:food_fish, "I want fish") %>
+					<%= f.radio_button(:food, "vegetarian") %>
+					<%= f.label :foo_veg, "<span class='wants'>I want </span>Vegetarian".html_safe %>
+					<%= f.radio_button(:food, "meat") %>
+					<%= f.label :food_meat, "<span class='wants'>I want </span>Meat".html_safe %>
+					<%#= f.radio_button(:food, "fish") %>
+					<%#= f.label :foo_fish, "<span class='wants'>I want </span>Fish".html_safe %>
 				  </p>
 				  </div>
 
@@ -110,6 +105,7 @@
 <script type="text/javascript">
 	$(".rsvp_yes").on("change", function(){
   		$('#form_food').css('display', 'block')
+  		$('#landingmobile').css('display', 'none')
 	});
 
 	$(".rsvp_no").on("change", function(){
