--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -26,7 +26,7 @@
 
 
 <p >
-  <strong>Food Choice:</strong>
+  <strong>Food<span class="colonMobile">:</span><span class="choiceM">Choice:</span> </strong>
   <% if @guest.food == 'vegetarian' %>
     <strong><span class="wantsM">You are eating</span> vegetarian</strong>
     <% elsif @guest.food == 'meat' %>
